--- a/linux/service/mongodb.conf
+++ b/linux/service/mongodb.conf
@@ -1,10 +1,10 @@
 verbose=true
 vvv=true
-bind_ip_all=true
-port=27017
+bind_ip=10.0.32.10
 dbpath=/data/mongodb/rs0
 logpath=/data/mongodb/rs0.log
-pidfilepath=/var/rung/mongodb.pid
+pidfilepath=/var/run/mongodb.pid
+port=27017
 replSet=rs0
 smallfiles=true
 oplogSize=3072
